--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Todo</string>
+    <string name="all_tasks">All Tasks</string>
+    <string name="categories">Categories</string>
+    <string name="analytics">Analytics</string>
 </resources>
